assets/css/style.css
* {
  box-sizing: border-box;
}

body {
  font-family: 'Roboto', sans-serif;
  font-size: 32px;
  text-align: center;
  color: white;
  background-color: #203;
}

h1 {
  font-size: 72px;
}

.starting {
  background-color: #7777cc;
}

.right {
  background-color: gold;
  color: black;
}

.correct {
  background-color: #00cc99;
  color: black;
}

.chosen {
  background-color: white;
  color: black;
}

.used, .paused {
  opacity: .25;
}

.container {
  display: grid;
  grid-template-columns: repeat(4, 225px);
  grid-template-rows: 150px;
  grid-gap: 1rem;
  margin: 0 auto;
  width: 1020px;
}

#lifelineBox {
  grid-column: 2 / 4;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: 1fr;
}

.lifeline {
  vertical-align: middle;
}

.circle {
  border: solid 5px white;
  border-radius: 50%;
}

.answerBox {
  padding: 25px;
  height: 85px;
}

.active {
  border-radius: 50px;
  border: solid 5px white;
}

#scoreBox {
  grid-column: 1 / 2;
}

#timeBox {
  grid-column: 4 / 5;
}

#questionBox {
  grid-column: 1 / 5;
  padding: 100px;
  height: 275px;
  border-radius: 50px;
  border: solid 5px white;
}

.lifeline::after, #scoreBox::after, #timeBox::after {
  content: "";
  display: inline-block;
  vertical-align: middle;
  height: 100%;
  width: 1px;
}

#answerABox {
  grid-column: 1 / 3;
}

#answerBBox {
  grid-column: 3 / 5;
}

#answerCBox {
  grid-column: 1 / 3;
}

#answerDBox {
  grid-column: 3 / 5;
}

